<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="how_to_text">How to play:</string>
    <string name="tap_text_and_buttons">Tap the text and buttons</string>
    <string name="button_explain_text">Press a button to turn a random box that color</string>
</resources>