<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/box_one_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="@string/box_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/box_two_text"
            style="@style/WhiteBox"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/box_two"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" />

        <TextView
            android:id="@+id/box_three_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box_three"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            app:layout_constraintTop_toTopOf="@+id/box_two_text"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/box_four_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box_four"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text" />

        <TextView
            android:id="@+id/box_five_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box_five"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text" />

        <TextView
            android:id="@+id/how_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/how_to_text"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tap_and_text_buttons_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tap_and_text_buttons_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin_wide"
            android:text="@string/tap_text_and_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toEndOf="@+id/how_to_text"
            app:layout_constraintTop_toBottomOf="@+id/box_two_text" />

        <Button
            android:id="@+id/button_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:text="@string/button_red"
            app:backgroundTint="@color/design_default_color_error"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_yellow"
            app:layout_constraintEnd_toStartOf="@+id/button_yellow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"
            android:text="@string/button_yellow"
            android:textColor="@color/black"
            app:backgroundTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_green"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_red"
            app:layout_constraintTop_toBottomOf="@+id/button_explain"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="@string/button_green"
            app:backgroundTint="@android:color/holo_green_dark"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_yellow" />

        <TextView
            android:id="@+id/button_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_explain_text"
            app:layout_constraintBottom_toTopOf="@+id/button_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tap_and_text_buttons_text"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>